--- a/dr_faq.html
+++ b/dr_faq.html
@@ -7,8 +7,8 @@
     Case Problem 3
     
     Diane's Run Home Page
-    Author: 
-    Date:   
+    Author:Evelyn Duarte
+    Date:8/22/18  
 
     Filename: dr_faq.html
    -->
