--- a/dr_faq.html
+++ b/dr_faq.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 3
@@ -12,15 +13,106 @@
 
     Filename: dr_faq.html
    -->
-   <meta charset="utf-8">
-   <meta name="keywords" content="breast cancer, run, charity" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>Diane's Run FAQ</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="breast cancer, run, charity" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Diane's Run FAQ</title>
+    <link rel="stylesheet" href="dr_base.css">
+    <link rel="stylesheet" href="dr_layout3.css">
 
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="dr_info.html">Race Info</a>
+                </li>
+                <li>
+                    <a href="dr_faq.html">FAQ</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <header>
+            <h1 id="pagetop"></h1>
+            <img src="dr_logo.png" alt="Diane's Run">
+            <h1>Frequently Asked Questions</h1>
+        </header>
+        <ol>
+            <li>
+                <a href="faq1">How do I sign up?</a>
+            </li>
+            <li>
+                <a href="faq2">What is the minimum fund-raising total I have to raise?</a>
+            </li>
+            <li>
+                <a href="faq3">Will I receive a shirt to wear at the race?</a>
+            </li>
+            <li>
+                <a href="faq4">When will my registration pack arrive?</a>
+            </li>
+            <li>
+                <a href="faq5">What does it cost to register?</a>
+            </li>
+            <li>
+                <a href="faq6">What happens during the race?</a>
+            </li>
+            <li>
+                <a href="faq7">Will the race be cancelled if it rains?</a>
+            </li>
+            <li>
+                <a href="faq8">Do I need to register my child?</a>
+            </li>
+            <li>
+                <a href="faq9">Can I bring my pet?</a>
+            </li>
+            <li>
+                <a href="faq10">Where do I park?</a>
+            </li>
+            <li>
+                <a href="faq11">Can I collect sponsorship online?</a>
+            </li>
+            <li>
+                <a href="faq12">How do I withdraw from the event?</a>
+            </li>
+            <li>
+                <a href="faq13">I am looking for accommodation for the event, where is best to stay?</a>
+            </li>
+        </ol>
+        <h2>
+            <a href="dr_faq1"> How do I sign up?</a>
+        </h2> Go to our online form where you can enter your registration information. Remember that the registration desk is closed
+        the night before the event. What is the minimum fund-raising total I have to raise? There is no minimum sponsorship
+        target. Any total will help in the cause. Just try and raise as much as you can. Will I receive a shirt to wear at
+        the race? Yes! We will be sending out a state of the art running vest or T-shirt to you in the post about a month
+        before race day. Please remember to specify which vest or T-shirt size you would like when confirming your place.
+        When will my registration pack arrive? We will mail out your registration pack in the post within two weeks of your
+        registration. If you have not received the pack within that time, please contact us. What does it cost to register?
+        $35 for the 5K/10K race. The 1-Mile Fun Runs are free. What happens during the race? Please visit the Race Info page
+        for all details on what to expect on race day. Will the race be cancelled if it rains? This event will occur rain
+        or shine. We suggest ponchos and rain gear if it does happen to rain. All registration fees and donations are non-refundable
+        in the event of rain. Do I need to register my child? Yes, if your child is participating in the 5K/10K races. There
+        is no need to register children for the 1 Mile Fun Run. Can I bring my pet? Pets are discouraged at the race. There
+        are over 2000 people competing in the race and it is too crowded to accommodate pets. Where do I park? The earlier
+        you arrive at the race site, the easier parking will be! You may park on the streets as long as you are not blocking
+        driveways or residential streets. We encourage you to carpool with your team or other participants if possible. Can
+        I collect sponsorship online? Yes. You can sign up at several web charity organizers and follow their easy step by
+        step guide to create your own online fund-raising page. All money raised through your page will be automatically
+        sent through to us and allocated to your record. How do I withdraw from the event? The registration pack will include
+        an official event magazine with withdrawal instructions. Complete the withdrawal form and send it to the race organizers
+        along with the race gear and timing chip. A $10 organizational fee will be charged to all withdrawals. I am looking
+        for accommodation for the event, where is best to stay? We are partnering with the Cheyenne Chamber of Commerce to
+        direct visiting runners for places to stay. Low-cost camping is available in Prairie Park.
 
+
+    </section>
+    <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
 </html>
