--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="dr_info.html">Race Info</a>
-            </li>
-            <li>
-                <a href="dr_faq.html">FAQ</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="dr_info.html">Race Info</a>
+                </li>
+                <li>
+                    <a href="dr_faq.html">FAQ</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <section>
         <h1>What Your Support Does</h1>
         <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction is fear and confusion. Support is just
@@ -60,33 +63,36 @@
                 easy access to the latest resources and help.</li>
         </ul>
     </section>
-    <header>
-        <img src="dr_photo1.png" alt="Diane's Run">
-        <h1>Diane's Run - September 9, 2017</h1>
-        <p> Join over 2000 athletes in Cheyenne, Wyoming, for
-            <strong>Diane's Run</strong> to raise money for breast cancer awareness and research. The 5K and 10K races are challenging,
-            yet attainable. You can aim for a personal best while taking part to raise money for this important charity.
-            If you can't run, consider walking; joining young and old in the fight by participating in the 1-Mile Walk for
-            Hope.
-        </p>
-        <h2>How to Join</h2>
-        <p>You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com. The $35 entry fee
-            is tax deductible and goes directly to important research and women in need. We keep our overhead very low so
-            every dollar counts. More than 75% of the net proceeds fund screening and treatment programs in your communities.
-            We welcome out-of-town visitors. We will help you find accommodations during your visit. </p>
-        <h2>History</h2>
-        <p>Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature
-            Wyoming event with more than 2000 participants annually. The event is enormously effective in spreading the message
-            that breast cancer need not be fatal if caught early enough with mammography and breast self-exam. As well as
-            a top-flight athletic event, Diane's Run is an emotionally moving event attracting many first timers and recreational
-            runners. This event provides all of us with the opportunity to spread a hopeful message about breast cancer to
-            our families and our communities.</p>
-        <h2>Remembering Diane</h2>
-        <p>Diane's Run is named in remembrance of Diane Wheaton, mother of 2 and wife of Peter, who passed away in May, 2003.
-            Diane was an outspoken advocate of physical fitness and healthy living. She was an inspiration to all who knew
-            her and continues to be an inspiration to the thousands of runners who have participated in this event. We hope
-            you can join us this year and become part of the Diane's Run family.</p>
-    </header>
+    <section>
+        <header>
+            <img src="dr_photo1.png" alt="Diane's Run">
+            <h1>Diane's Run - September 9, 2017</h1>
+            <p> Join over 2000 athletes in Cheyenne, Wyoming, for
+                <strong>Diane's Run</strong> to raise money for breast cancer awareness and research. The 5K and 10K races are challenging,
+                yet attainable. You can aim for a personal best while taking part to raise money for this important charity.
+                If you can't run, consider walking; joining young and old in the fight by participating in the 1-Mile Walk
+                for Hope.
+            </p>
+            <h2>How to Join</h2>
+            <p>You can guarantee a spot by filling out the entry form and mailing it to
+                <a href="mailto:dianesrun@example.com">dianesrun@example.com</a>. The $35 entry fee is tax deductible and goes directly to important research and
+                women in need. We keep our overhead very low so every dollar counts. More than 75% of the net proceeds fund
+                screening and treatment programs in your communities. We welcome out-of-town visitors. We will help you find
+                accommodations during your visit. </p>
+            <h2>History</h2>
+            <p>Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature
+                Wyoming event with more than 2000 participants annually. The event is enormously effective in spreading the
+                message that breast cancer need not be fatal if caught early enough with mammography and breast self-exam.
+                As well as a top-flight athletic event, Diane's Run is an emotionally moving event attracting many first
+                timers and recreational runners. This event provides all of us with the opportunity to spread a hopeful message
+                about breast cancer to our families and our communities.</p>
+            <h2>Remembering Diane</h2>
+            <p>Diane's Run is named in remembrance of Diane Wheaton, mother of 2 and wife of Peter, who passed away in May,
+                2003. Diane was an outspoken advocate of physical fitness and healthy living. She was an inspiration to all
+                who knew her and continues to be an inspiration to the thousands of runners who have participated in this
+                event. We hope you can join us this year and become part of the Diane's Run family.</p>
+        </header>
+    </section>
     <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
