--- a/dr_info.html
+++ b/dr_info.html
@@ -1,5 +1,8 @@
+<!--comment shown in index page.-->
 <!doctype html>
 <html>
+
+<!--comment shown in index page.-->
 
 <head>
     <!--
@@ -19,6 +22,7 @@
     <link rel="stylesheet" href="dr_base.css">
     <link rel="stylesheet" href="dr_layout2.css">
 </head>
+<!--comment shown in index page.-->
 
 <body>
     <header>
@@ -36,6 +40,7 @@
             </ul>
         </nav>
     </header>
+    <!--I places a header element to render to the top and then placed the time tag to place the date of when it was last updated and to be placed accurately.Then placed an h1 tag to show the level of importance since it is a title. Then placed the logo of their website by adding the img tag.Then placed the title of each part of the information in an h2 tag and placed the information in an unordered list to show the list as bullet points.-->
     <section>
         <header>
             <p>
@@ -73,6 +78,7 @@
             </li>
         </ul>
     </section>
+    <!--comment shown in index page.-->
     <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
