--- a/dr_faq.html
+++ b/dr_faq.html
@@ -1,5 +1,7 @@
+<!--comment shown in index page.-->
 <!doctype html>
 <html>
+<!--comment shown in index page.-->
 
 <head>
     <!--
@@ -23,6 +25,7 @@
 </head>
 
 <body>
+    <!--comment shown in index page.-->
     <header>
         <nav>
             <ul>
@@ -38,6 +41,7 @@
             </ul>
         </nav>
     </header>
+    <!--Inside the section element, I nested in a "<h1 id="pagetop"></h1> so that it knows where to place the page when you click on the back to page text that is placed at the bottom of the page. The h1 to show as important because it is a title. Each question has an anchor that defines them so it is easy to click and go to the answer directly.They are also in an ordered list so that each question could be numbered. -->
     <section>
         <header>
             <h1 id="pagetop"></h1>
@@ -46,72 +50,119 @@
         </header>
         <ol>
             <li>
-                <a href="faq1">How do I sign up?</a>
+                <a href="#faq1">How do I sign up?</a>
             </li>
             <li>
-                <a href="faq2">What is the minimum fund-raising total I have to raise?</a>
+                <a href="#faq2">What is the minimum fund-raising total I have to raise?</a>
             </li>
             <li>
-                <a href="faq3">Will I receive a shirt to wear at the race?</a>
+                <a href="#faq3">Will I receive a shirt to wear at the race?</a>
             </li>
             <li>
-                <a href="faq4">When will my registration pack arrive?</a>
+                <a href="#faq4">When will my registration pack arrive?</a>
             </li>
             <li>
-                <a href="faq5">What does it cost to register?</a>
+                <a href="#faq5">What does it cost to register?</a>
             </li>
             <li>
-                <a href="faq6">What happens during the race?</a>
+                <a href="#faq6">What happens during the race?</a>
             </li>
             <li>
-                <a href="faq7">Will the race be cancelled if it rains?</a>
+                <a href="#faq7">Will the race be cancelled if it rains?</a>
             </li>
             <li>
                 <a href="faq8">Do I need to register my child?</a>
             </li>
             <li>
-                <a href="faq9">Can I bring my pet?</a>
+                <a href="#faq9">Can I bring my pet?</a>
             </li>
             <li>
-                <a href="faq10">Where do I park?</a>
+                <a href="#faq10">Where do I park?</a>
             </li>
             <li>
-                <a href="faq11">Can I collect sponsorship online?</a>
+                <a href="#faq11">Can I collect sponsorship online?</a>
             </li>
             <li>
-                <a href="faq12">How do I withdraw from the event?</a>
+                <a href="#faq12">How do I withdraw from the event?</a>
             </li>
             <li>
-                <a href="faq13">I am looking for accommodation for the event, where is best to stay?</a>
+                <a href="#faq13">I am looking for accommodation for the event, where is best to stay?</a>
             </li>
         </ol>
-        <h2>
-            <a href="dr_faq1"> How do I sign up?</a>
-        </h2> Go to our online form where you can enter your registration information. Remember that the registration desk is closed
-        the night before the event. What is the minimum fund-raising total I have to raise? There is no minimum sponsorship
-        target. Any total will help in the cause. Just try and raise as much as you can. Will I receive a shirt to wear at
-        the race? Yes! We will be sending out a state of the art running vest or T-shirt to you in the post about a month
-        before race day. Please remember to specify which vest or T-shirt size you would like when confirming your place.
-        When will my registration pack arrive? We will mail out your registration pack in the post within two weeks of your
-        registration. If you have not received the pack within that time, please contact us. What does it cost to register?
-        $35 for the 5K/10K race. The 1-Mile Fun Runs are free. What happens during the race? Please visit the Race Info page
-        for all details on what to expect on race day. Will the race be cancelled if it rains? This event will occur rain
-        or shine. We suggest ponchos and rain gear if it does happen to rain. All registration fees and donations are non-refundable
-        in the event of rain. Do I need to register my child? Yes, if your child is participating in the 5K/10K races. There
-        is no need to register children for the 1 Mile Fun Run. Can I bring my pet? Pets are discouraged at the race. There
-        are over 2000 people competing in the race and it is too crowded to accommodate pets. Where do I park? The earlier
-        you arrive at the race site, the easier parking will be! You may park on the streets as long as you are not blocking
-        driveways or residential streets. We encourage you to carpool with your team or other participants if possible. Can
-        I collect sponsorship online? Yes. You can sign up at several web charity organizers and follow their easy step by
-        step guide to create your own online fund-raising page. All money raised through your page will be automatically
-        sent through to us and allocated to your record. How do I withdraw from the event? The registration pack will include
-        an official event magazine with withdrawal instructions. Complete the withdrawal form and send it to the race organizers
-        along with the race gear and timing chip. A $10 organizational fee will be charged to all withdrawals. I am looking
-        for accommodation for the event, where is best to stay? We are partnering with the Cheyenne Chamber of Commerce to
-        direct visiting runners for places to stay. Low-cost camping is available in Prairie Park.
+
+        <!--Each h2 has an id of faq and a specific number, that reason is because when it has the id it renders back to where the question is and which one belongs to which question, thats defined by the number each question has. The answers are placed in a paragraph tag to place the information as a paragraph directly below the question. -->
+        <h2 id="faq1">How do I sign up?</h2>
+
+        <p>Go to our online form where you can enter your registration information. Remember that the registration desk is closed
+            the night before the event.</p>
+
+
+        <h2 id="faq2">What is the minimum fund-raising total I have to raise?</h2>
+
+        <p>There is no minimum sponsorship target. Any total will help in the cause. Just try and raise as much as you can.</p>
+        <h2 id="faq3"> Will I receive a shirt to wear at the race?</h2>
+
+        <p>Yes! We will be sending out a state of the art running vest or T-shirt to you in the post about a month before race
+            day. Please remember to specify which vest or T-shirt size you would like when confirming your place.</p>
+
+        <h2 id="faq4">When will my registration pack arrive?</h2>
+
+        <p>We will mail out your registration pack in the post within two weeks of your registration. If you have not received
+            the pack within that time, please contact us.</p>
+        <h2 id="faq5">What does it cost to register?</h2>
+        <p>$35 for the 5K/10K race. The 1-Mile Fun Runs are free.</p>
+
+        <h2 id="faq6"> What happens during the race?</h2>
+
+        <p>Please visit the Race Info page for all details on what to expect on race day.</p>
+
+        <h2 id="faq7">Will the race be cancelled if it rains?</h2>
+
+        <p>This event will occur rain or shine. We suggest ponchos and rain gear if it does happen to rain. All registration
+            fees and donations are non-refundable in the event of rain.</p>
+
+        <h2 id="faq8">Do I need to register my child?</h2>
+
+        <p>Yes, if your child is participating in the 5K/10K races. There is no need to register children for the 1 Mile Fun
+            Run.
+        </p>
+
+        <h2 id="faq9">Can I bring my pet?</h2>
+
+        <p>Pets are discouraged at the race. There are over 2000 people competing in the race and it is too crowded to accommodate
+            pets.
+        </p>
+
+        <h2 id="faq10">Where do I park?</h2>
+
+        <p>The earlier you arrive at the race site, the easier parking will be! You may park on the streets as long as you are
+            not blocking driveways or residential streets. We encourage you to carpool with your team or other participants
+            if possible.</p>
+
+        <h2 id="faq11">Can I collect sponsorship online?</h2>
+
+        <p>Yes. You can sign up at several web charity organizers and follow their easy step by step guide to create your own
+            online fund-raising page. All money raised through your page will be automatically sent through to us and allocated
+            to your record.</p>
+
+        <h2 id="faq12">How do I withdraw from the event?</h2>
+
+        <p>The registration pack will include an official event magazine with withdrawal instructions. Complete the withdrawal
+            form and send it to the race organizers along with the race gear and timing chip. A $10 organizational fee will
+            be charged to all withdrawals.</p>
+
+        <h2 id="faq13"> I am looking for accommodation for the event, where is best to stay?</h2>
+
+        <p> We are partnering with the Cheyenne Chamber of Commerce to direct visiting runners for places to stay. Low-cost camping
+            is available in Prairie Park.</p>
+        <!--This part of my code is what is signalled to the anchor on top that has the id of pagetop similar to the questions. -->
+        <p>
+            <a href="#pagetop">Return to page top.</a>
+        </p>
 
 
     </section>
+    <!--comment shown in index page.-->
     <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
