--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!--The doctype renders the type of document.-->
 <!doctype html>
 <html>
+<!--Placing the head tag to nest the tags: meta,title and link. The are used to style the page and inport important and prioity elements.-->
 
 <head>
     <!--
@@ -20,8 +22,10 @@
     <link rel="stylesheet" href="dr_layout.css">
 
 </head>
+<!--I used the body tag to input the information that will be placed directly on the page.-->
 
 <body>
+    <!--I made a header with the nav nested so that the navigation will appear at the top of the page and the three pages are able to go from on page to another. To make it look properly, I nested the list tags. -->
     <header>
         <nav>
             <ul>
@@ -37,14 +41,15 @@
             </ul>
         </nav>
     </header>
-
+    <!--For the first section element to place the information on the page, nesting the h1 tag to show the level of importance and after that a paragraph tag to place the information. Also, a strong tag on the money to make it noticable and bold. -->
     <section>
         <h1>What Your Support Does</h1>
         <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction is fear and confusion. Support is just
             a phone call or mouse click away. Our free services offer a friendly ear and expert guidance to anyone dealing
             with this life-threatening illness.</p>
         <p>By running or walking with us, you can ensure that we are there when people need us. Here is how your contribution
-            can help:</p>
+            can help:
+        </p>
         <ul>
             <li>
                 <strong>$15</strong> pays for a headscarf set, boosting the confidence of women who have lost their hair from her
@@ -63,6 +68,7 @@
                 easy access to the latest resources and help.</li>
         </ul>
     </section>
+    <!--I placed another section element to seperate the information from the one on top. I also nested an image with the img tag. Then, I placed an h1 tag to show importance to the title. Then, placed a paragraph tag to place the information inside. A strong tag to make it bold. The h2 and p tags are placed to show the information of the different points. Aslo, placed the email in an anchor tag so the reader can easily access it like they can access the accommodation question with the anchor tag.-->
     <section>
         <header>
             <img src="dr_photo1.png" alt="Diane's Run">
@@ -78,7 +84,7 @@
                 <a href="mailto:dianesrun@example.com">dianesrun@example.com</a>. The $35 entry fee is tax deductible and goes directly to important research and
                 women in need. We keep our overhead very low so every dollar counts. More than 75% of the net proceeds fund
                 screening and treatment programs in your communities. We welcome out-of-town visitors. We will help you find
-                accommodations during your visit. </p>
+                <a href="dr_faq.html#faq13">accommodations</a> during your visit. </p>
             <h2>History</h2>
             <p>Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature
                 Wyoming event with more than 2000 participants annually. The event is enormously effective in spreading the
@@ -93,6 +99,7 @@
                 event. We hope you can join us this year and become part of the Diane's Run family.</p>
         </header>
     </section>
+    <!--I placed a footer to place it at the bottom of the page and to place the address. -->
     <footer>Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
